<resources>
    <string name="app_name">EduWorld</string>

    <!-- WELCOME Activity -->
    <string name="welcome_to_eduworld">Welcome to EduWorld</string>
    <string name="welcome_slogan">Be More Efficient</string>
    <string name="welcome_message">Choose a tutor and get ready for those difficult tests</string>

    <!-- LOGIN Activity -->
    <string name="login_to_your_account">Log in to your account</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="login">Log in</string>
    <string name="not_a_member">Not a member?</string>
    <string name="sign_up">Sign Up</string>
    <string name="or_login_with">Or log in with</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>

    <!-- Misc Buttons -->
    <string name="go_to_login">Login</string>

    <!-- Tabs -->
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_settings">Settings</string>
    <string name="title_manage">Manage</string>
    <string name="title_chat">Chat</string>
    <string name="title_map">Map</string>

    <!-- Time -->
    <string name="time_yesterday">Yesterday</string>

    <!-- Uncategorised -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_out">Log Out</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="title_activity_maps">Map</string>
    <string name="create_new_account">Create New Account</string>
    <string name="already_a_member">Already a member?</string>
    <string name="contentdescription_eduworld_logo">EduWorld Logo</string>
    <string name="profile">Profile</string>
    <string name="send">Send</string>

</resources>
