<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/Background"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/background"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:gravity="center_vertical|center_horizontal"
            android:lineSpacingExtra="8sp"
            android:text="@string/login_to_your_account"
            android:textColor="@android:color/white"
            android:textSize="36sp"
            android:textStyle="bold"
            android:typeface="normal" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/email_input"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_corner_button"
            android:ems="10"
            android:hint="@string/email_hint"
            android:inputType="text|textEmailAddress"
            android:padding="4dp"
            android:singleLine="false" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/password_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/rounded_corner_button"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:padding="4dp" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/textView2"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp"
            android:layout_weight="0"
            android:gravity="end"
            android:text="@string/forgot_your_password"
            android:textAllCaps="false"
            android:textColor="@android:color/holo_orange_light" />

        <Button
            android:id="@+id/button"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0"
            android:background="@drawable/rounded_corner_button"
            android:fadingEdge="none"
            android:onClick="login"
            android:text="@string/login"
            android:textAllCaps="true"
            android:textColor="@android:color/holo_orange_light" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="23dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="end"
                android:text="@string/not_a_member"
                android:textSize="18sp" />

            <Button
                android:id="@+id/button5"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/sign_up"
                android:textColor="@android:color/holo_orange_light" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="4dp"
            android:layout_weight="0"
            android:padding="2dp"
            android:text="@string/or_login_with"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_corner_button"
                android:text="@string/facebook"
                android:textColor="@android:color/holo_orange_light" />

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_corner_button"
                android:text="@string/google"
                android:textColor="@android:color/holo_orange_light" />
        </LinearLayout>
    </LinearLayout>




</android.support.constraint.ConstraintLayout>