<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".RegistrationActivity"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="30sp">

    <TextView
        android:id="@+id/registration_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center_vertical|center_horizontal"
        android:lineSpacingExtra="8sp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:text="@string/create_new_account"
        android:textColor="@android:color/white"
        android:textSize="36sp"
        android:textStyle="bold"
        android:typeface="normal" />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:background="@drawable/rounded_corner_input"
        android:ems="10"
        android:importantForAutofill="no"
        android:hint="@string/email_hint"
        android:inputType="text|textEmailAddress"
        android:padding="8dp"
        android:singleLine="false"
        tools:targetApi="o" />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:background="@drawable/rounded_corner_input"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:padding="8dp" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:background="@drawable/rounded_corner_button"
        android:fadingEdge="none"
        android:onClick="register"
        android:text="@string/sign_up"
        android:textAllCaps="true"
        android:textColor="@color/colorAccent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/alreadyMember_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/already_a_member"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_button" />

        <TextView
            android:id="@+id/logIn_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18sp"
            android:layout_marginRight="18sp"
            android:baselineAligned="false"
            android:clickable="true"
            android:focusable="true"
            android:onClick="gotoLogin"
            android:text="@string/login"
            android:textColor="@color/colorAccent"
            android:textSize="18sp" />

    </LinearLayout>


</LinearLayout>